--- a/todo.html
+++ b/todo.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="main-window">
 		<h1 class="list-title border">TODO LIST.</h1>
-		<input class="form border" value="ここに入力してください">
+		<input class="form border" value="">
 		<h2 class="border" id="doTitle">DO.</h2>	
 		<ul id="doList"></ul>
 		<h2 class="border" id="doneTitle">DONE.</h2>
